--- a/ledani.example.conf
+++ b/ledani.example.conf
@@ -1,7 +1,7 @@
-[IP]
-address-range=192.168.0.0/24
+[STATUS]
+pin=3
 
 [MAC]
 # see http://elinux.org/RPi_Low-level_peripherals for a pin map
-3=00:00:00:00:00:00
-5=00:00:00:00:00:01
+5=00:00:00:00:00:00
+7=00:00:00:00:00:01
